--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,6 @@
 {
-    "root": true,
     "extends": ["next/core-web-vitals", "next/typescript"],
     "rules": {
-        "indent": ["error", 4]
+        "indent": ["warn", 4]
     }
 }
