--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -3,7 +3,7 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - main  # Run this workflow on pushes to the main branch
+      - trunk  # Run this workflow on pushes to the main branch
 
 jobs:
   build-and-deploy:
